--- a/styles/Game.module.css
+++ b/styles/Game.module.css
@@ -14,38 +14,31 @@
   text-align: center;
 }
 
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-
-  max-width: 800px;
-  margin-top: 3rem;
-}
-
-.card {
-  margin: 1rem;
-  flex-basis: 45%;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
+.square {
+  text-align: center;
+  color: white;
   border: 1px solid #eaeaea;
-  border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
+.square:hover,
+.square:focus,
+.square:active,
+.button:hover,
+.button:focus,
+.button:active {
   color: #0070f3;
   border-color: #0070f3;
+  cursor: pointer;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.link {
+  margin: 0 5px;
+}
+
+.link:hover,
+.link:focus,
+.link:active {
+  color: #0070f3;
+  cursor: pointer;
 }
